rust/cubesql/cubesql/src/compile/engine/df/optimizers/snapshots/cubesql__compile__engine__df__optimizers__sort_push_down__tests__sort_down_join_sort_left.snap
---
source: cubesql/src/compile/engine/df/optimizers/sort_push_down.rs
expression: optimize(&plan)
---
Projection: #j1.c1, #j2.c2
  Inner Join: #j1.key = #j2.key
    Sort: #j1.c1 ASC NULLS LAST
      Projection: #j1.key, #j1.c1
        TableScan: j1 projection=None
    Projection: #j2.key, #j2.c2
      TableScan: j2 projection=None
